Fix grid hover effect Since the hover effect was applied to the grid_cell, which wraps the empty/filled_cell, the background colors for the empty/filled_cell would be in front of the hover color, so apply the hover effect directly to the empty/filled_cell element. This way, the hover effect/color can be different, as well.

--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -24,17 +24,18 @@
     width: 115px;
     height: 115px;
     border: 1px solid;
-
-    &:hover {
-    background-color: #ddd;
-    cursor: pointer;
-    }
+    position: relative;
 }
 
 .empty_cell {
     background-color: #f0f0f0;
     width: 100%;
     height: 100%;
+
+    &:hover {
+        background-color: #c8c8c8;
+        cursor: pointer;
+    }
 }
 
 .filled_cell {
@@ -44,4 +45,9 @@
     background-color: #909090;
     width: 100%;
     height: 100%;
+
+    &:hover {
+        background-color: #686868;
+        cursor: pointer;
+    }
 }
